[package]
name = "autodocs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.29"
openai_api_rust = "0.1.9"
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
tokio = { version = "1.43.0", features = ["full"] }
